--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^3.2.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "dompurify": "^3.1.2",
     "firebase": "^10.9.0",
     "i18next": "^23.11.2",
